// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > injects import into script setup block 1`] = `
"<script setup lang=\\"ts\\">
import { FormKitLazyProvider } from '@formkit/vue'
import { FormKit } from '@formkit/vue'
</script>

<template>
  
<FormKitLazyProvider>
<FormKit
    type=\\"text\\"
    label=\\"Your name\\"
    help=\\"Enter your name\\"
  />
</FormKitLazyProvider>

</template>"
`;

exports[`index > injects inside root node if there is one 1`] = `
"<script setup>import { FormKitLazyProvider } from '@formkit/vue'</script>
<template>
    <div class=\\"fizzbuzz\\">
      
<FormKitLazyProvider>
<FormKit />
</FormKitLazyProvider>

    </div>
  </template>"
`;

exports[`index > injects inside root node with full sfc 1`] = `
"<script lang=\\"ts\\" setup>
import { FormKitLazyProvider } from '@formkit/vue'
function handleLoginSubmit(values: any) {
  window.alert(\\"You are logged in. Credentials: 
\\" + JSON.stringify(values));
}
</script>

<template>
  <div>
    
<FormKitLazyProvider>
<FormKit type=\\"form\\" submit-label=\\"login\\" @submit=\\"handleLoginSubmit\\">
      <FormKit type=\\"email\\" label=\\"Email\\" name=\\"email\\" />
      <FormKit type=\\"password\\" label=\\"Password\\" name=\\"password\\" />
    </FormKit>
</FormKitLazyProvider>

  </div>
</template>
"
`;

exports[`index > injects inside root node with multiple child elements 1`] = `
"<script lang=\\"ts\\" setup>
import { FormKitLazyProvider } from '@formkit/vue'
function handleLoginSubmit(values: any) {
  window.alert(\\"You are logged in. Credentials: 
\\" + JSON.stringify(values));
}
</script>

<template>
  <div>
    
<FormKitLazyProvider>
<main>
    <p>
    <FormKit type=\\"form\\" submit-label=\\"login\\" @submit=\\"handleLoginSubmit\\">
      <FormKit type=\\"email\\" label=\\"Email\\" name=\\"email\\" />
      <FormKit type=\\"password\\" label=\\"Password\\" name=\\"password\\" />
    </FormKit>
    </p>
    </main>
    <div class=\\"filler\\">Here we go</div>
</FormKitLazyProvider>

  </div>
</template>
"
`;

exports[`index > injects setup block when using options api 1`] = `
"<script setup lang=\\"ts\\">import { FormKitLazyProvider } from '@formkit/vue'</script>
<script lang=\\"ts\\">
import { FormKit } from '@formkit/vue'

export default {
  components: {
    FormKit
  }
}
</script>

<template>
  <div>
    
<FormKitLazyProvider>
<h1>Nothing to see here</h1>
    <FormKit type=\\"text\\" label=\\"Check me out\\" />
</FormKitLazyProvider>

  </div>
</template>"
`;

exports[`index > injects the template block into an normally structured sfc 1`] = `
"<script setup>import { FormKitLazyProvider } from '@formkit/vue'</script>
<template>
  
<FormKitLazyProvider>
<FormKit />
</FormKitLazyProvider>

</template>"
`;
